--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <mwta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Sisyphus</div>
+            <a class="logo" href="home.html">Sisyphus</a>
             <ul class="nav-list">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -24,4 +24,27 @@
             </div>
         </nav>
     </header>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Sisyphus</h3>
+                <p>Soluciones Web para tu empresa</p>
+            </div>
+            <div class="footer-section">
+                <h3>Contacto</h3>
+                <h3>e-mail: info@sisyphus.com</h3>
+                <h3>Tel: +51 989 831 534</h3>
+            </div>
+            <div class="footer-section">
+                <h3>Siguenos</h3>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
+            <div class="footer-bottom"></div>
+        </div>
+    </footer>
 </body>
+</html>
