--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href="home.html">Sisyphus</a>
+            <button class="logo" id="logoButton">Sisyphus</button>
             <div class="language-selector">
                 <select id="language-select">
                     <option value="es">Español</option>
@@ -46,5 +46,7 @@
             <div class="footer-bottom"></div>
         </div>
     </footer>
+
+    <script src="home-script.js"></script>
 </body>
 </html>
